--- a/.editorconfig
+++ b/.editorconfig
@@ -8,3 +8,14 @@ indent_style = tab
 insert_final_newline = false
 max_line_length = 120
 tab_width = 4
+
+ij_typescript_use_import_type = always
+ij_typescript_spaces_within_imports = true
+ij_typescript_use_double_quotes = false
+ij_typescript_force_quote_style = true
+ij_typescript_use_semicolon_after_statement = false
+ij_typescript_force_semicolon_style = true
+ij_typescript_spaces_within_object_literal_braces = true
+ij_typescript_enforce_trailing_comma = remove
+ij_typescript_import_sort_members = true
+ij_typescript_import_sort_module_name = true
