--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@vitejs/plugin-vue": "^5.0.4",
 		"typescript": "^5.4.5",
-		"vite": "^5.2.11"
+		"vite": "^5.2.11",
+		"vue": "^3.4.26"
 	}
 }
