--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"@vitejs/plugin-vue": "^5.0.4",
 		"typescript": "^5.4.5",
 		"vite": "^5.2.11",
-		"vue": "^3.4.26"
+		"vue": "^3.4.26",
+		"vue-router": "^4.3.2",
+		"vue-tsc": "^2.0.16"
 	}
 }
