--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^5.0.4",
 		"typescript": "^5.4.5",
+		"unocss": "^0.59.4",
 		"vite": "^5.2.11",
 		"vue": "^3.4.26",
 		"vue-router": "^4.3.2",
