:heavy_plus_sign: 添加 `@vueuse/core`

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"devDependencies": {
 		"@vitejs/plugin-vue": "^5.0.4",
+		"@vueuse/core": "^10.9.0",
 		"typescript": "^5.4.5",
 		"unocss": "^0.59.4",
 		"vite": "^5.2.11",
