--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@types/node": "^20.12.8",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vueuse/core": "^10.9.0",
 		"typescript": "^5.4.5",
