--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"@types/node": "^20.12.8",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vueuse/core": "^10.9.0",
+		"date-fns": "^3.6.0",
 		"echarts": "^5.5.0",
 		"remeda": "^1.61.0",
 		"sass": "^1.76.0",
