--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
+		"@types/blueimp-md5": "^2.18.2",
+		"@types/identicon.js": "^2.3.4",
 		"@types/node": "^20.12.8",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vueuse/core": "^10.9.0",
+		"blueimp-md5": "^2.19.0",
 		"date-fns": "^3.6.0",
 		"echarts": "^5.5.0",
+		"identicon.js": "^2.3.3",
 		"remeda": "^1.61.0",
 		"sass": "^1.76.0",
 		"typescript": "^5.4.5",
