--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 	"devDependencies": {
 		"@types/identicon.js": "^2.3.4",
 		"@types/node": "^20.12.8",
+		"@vicons/antd": "^0.12.0",
 		"@vitejs/plugin-vue": "^5.0.4",
 		"@vueuse/core": "^10.9.0",
 		"date-fns": "^3.6.0",
 		"echarts": "^5.5.0",
 		"identicon.js": "^2.3.3",
+		"naive-ui": "^2.38.2",
 		"remeda": "^1.61.0",
 		"sass": "^1.76.0",
 		"typescript": "^5.4.5",
