:package: :sparkles: :art: :wrench: 更新所有包到最新版, 安装并配置自动导入, 格式化代码, 移除不必要的导入

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,8 @@
 	"include": [
 		"src/**/*.ts",
 		"src/**/*.tsx",
-		"src/**/*.vue"
+		"src/**/*.vue",
+		"auto-imports.d.ts",
+		"components.d.ts"
 	]
 }
