--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
 	},
 	"devDependencies": {
 		"@types/identicon.js": "^2.3.4",
-		"@types/node": "^20.12.8",
+		"@types/node": "^20.14.2",
 		"@vicons/antd": "^0.12.0",
-		"@vitejs/plugin-vue": "^5.0.4",
-		"@vueuse/core": "^10.9.0",
+		"@vitejs/plugin-vue": "^5.0.5",
+		"@vueuse/core": "^10.10.0",
 		"date-fns": "^3.6.0",
 		"echarts": "^5.5.0",
 		"identicon.js": "^2.3.3",
 		"naive-ui": "^2.38.2",
-		"remeda": "^1.61.0",
-		"sass": "^1.76.0",
+		"remeda": "^2.0.6",
+		"sass": "^1.77.4",
 		"typescript": "^5.4.5",
-		"unocss": "^0.59.4",
-		"vite": "^5.2.11",
-		"vue": "^3.4.26",
-		"vue-echarts": "^6.7.2",
+		"unocss": "^0.60.4",
+		"unplugin-auto-import": "^0.17.6",
+		"unplugin-vue-components": "^0.27.0",
+		"vite": "^5.2.13",
+		"vue": "^3.4.27",
+		"vue-echarts": "^6.7.3",
 		"vue-router": "^4.3.2",
-		"vue-tsc": "^2.0.16"
+		"vue-tsc": "^2.0.21"
 	}
 }
