--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,6 +16,7 @@ jobs:
                     run_install: true
 
             -   run: pnpm run build
+            -   run: pnpm run check
 
             -   uses: peaceiris/actions-gh-pages@v4
                 with:
