--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "vue-tsc && vite build",
+		"check": "vue-tsc",
+		"build": "vite build",
 		"preview": "vite preview"
 	},
 	"devDependencies": {
