--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@vueuse/core": "^10.10.0",
 		"date-fns": "^3.6.0",
 		"echarts": "^5.5.0",
+		"hash-wasm": "^4.11.0",
 		"identicon.js": "^2.3.3",
 		"naive-ui": "^2.38.2",
 		"remeda": "^2.0.6",
