--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"identicon.js": "^2.3.3",
 		"naive-ui": "^2.38.2",
 		"remeda": "^2.3.0",
+		"rgbaster-plus": "^1.1.1",
 		"sass": "^1.77.6",
 		"typescript": "^5.5.3",
 		"unocss": "^0.61.3",
