--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,6 +2,11 @@ name: 部署
 
 on:
     push:
+        branches:
+            - main
+            - ci*
+        tags:
+            - "**"
     workflow_dispatch:
 
 jobs:
@@ -9,16 +14,24 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-            -   uses: actions/checkout@v4
-            -   uses: pnpm/action-setup@v3
-                with:
-                    version: latest
-                    run_install: true
+            - uses: actions/checkout@v4
+            - uses: pnpm/action-setup@v3
+              with:
+                  version: latest
+                  run_install: true
 
-            -   run: pnpm run build
-            -   run: pnpm run check
+            - run: pnpm run check
+            - run: pnpm run build
 
-            -   uses: peaceiris/actions-gh-pages@v4
-                with:
-                    github_token: ${{ secrets.GITHUB_TOKEN }}
-                    publish_dir: dist
+            - uses: peaceiris/actions-gh-pages@v4
+              with:
+                  github_token: ${{ secrets.GITHUB_TOKEN }}
+                  publish_dir: dist
+
+            - run: cd dist && zip -q -r -9 ../dist.zip .
+              if: startsWith(github.ref, 'refs/tags/')
+            - uses: softprops/action-gh-release@v2
+              if: startsWith(github.ref, 'refs/tags/')
+              with:
+                  files: dist.zip
+                  token: ${{ secrets.GITHUB_TOKEN }}
