--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -6,21 +6,43 @@ on:
             - main
     workflow_dispatch:
 
+permissions:
+    contents: read
+    pages: write
+    id-token: write
+
+concurrency:
+    group: "pages"
+    cancel-in-progress: false
+
 jobs:
     build:
         runs-on: ubuntu-latest
 
         steps:
-            - uses: actions/checkout@v4
-            - uses: pnpm/action-setup@v3
-              with:
-                  version: latest
-                  run_install: true
+            -   uses: actions/checkout@v4
+            -   uses: pnpm/action-setup@v3
+                with:
+                    version: latest
+                    run_install: true
 
-            - run: pnpm run build
-            - run: pnpm run check
+            -   run: pnpm run build
+            -   run: pnpm run check
 
-            - uses: peaceiris/actions-gh-pages@v4
-              with:
-                  github_token: ${{ secrets.GITHUB_TOKEN }}
-                  publish_dir: dist
+            -   uses: peaceiris/actions-gh-pages@v4
+                with:
+                    github_token: ${{ secrets.GITHUB_TOKEN }}
+                    publish_dir: dist
+            -   uses: actions/configure-pages@v5
+            -   uses: actions/upload-pages-artifact@v3
+                with:
+                    path: ./dist
+    deploy:
+        environment:
+            name: github-pages
+            url: ${{ steps.deployment.outputs.page_url }}
+        runs-on: ubuntu-latest
+        needs: build
+        steps:
+            -   id: deployment
+                uses: actions/deploy-pages@v4
