--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -46,3 +46,5 @@ jobs:
         steps:
             -   id: deployment
                 uses: actions/deploy-pages@v4
+                with:
+                    github_token: ${{ secrets.GITHUB_TOKEN }}
